--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -22,3 +22,8 @@ title: Le Wagon - Middleman - About
     </ul>
   </div>
 </div>
+
+
+
+<%= link_to "This is a link", "http://google.com" %>
+<a href="http://google.com">This is a link</a>
